--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								<div class="elementor-text-editor elementor-clearfix">
 				<div role="form" class="wpcf7" id="wpcf7-f1679-p1198-o1" lang="vi" dir="ltr">
 <div class="screen-reader-response"><p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul></div>
-<form action="https://tuyensinh.thanhdo.edu.vn/#wpcf7-f1679-p1198-o1" method="post" class="wpcf7-form init" enctype="multipart/form-data" novalidate="novalidate" data-status="init">
+<form id="myForm" submit="return submitForm()" action="https://script.google.com/macros/s/AKfycbybKbZWwVp1y8itoTE28pzkMvyC9X9dHF7E3Iam-FwHgwrC_CoU91YJDf-FdmTAPamnXQ/exec" method="post" class="wpcf7-form init" enctype="multipart/form-data" novalidate="novalidate" data-status="init">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="1679" />
 <input type="hidden" name="_wpcf7_version" value="5.6" />
@@ -1276,7 +1276,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <input type="hidden" name="quan_huyen" value="" class="wpcf7-form-control wpcf7-hidden" />
 <input type="hidden" name="tinh_thanh" value="" class="wpcf7-form-control wpcf7-hidden" />
 <input type="hidden" name="date_and_time" value="" class="wpcf7-form-control wpcf7-hidden" />
-<p><input type="submit" value="Đăng ký" class="wpcf7-form-control has-spinner wpcf7-submit guidangkyxettuyen" /></p>
+<p><input type="submit" value="Đăng ký" class="wpcf7-form-control has-spinner wpcf7-submit guidangkyxettuyenz" /></p>
 <p><!--script><br />
 jQuery(document).ready(function ($) {<br />
 $(function () {<br />
@@ -1309,7 +1309,7 @@ $(function () {<br />
 								<div class="elementor-text-editor elementor-clearfix">
 				<div role="form" class="wpcf7" id="wpcf7-f132-p1198-o2" lang="en-US" dir="ltr">
 <div class="screen-reader-response"><p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul></div>
-<form action="https://tuyensinh.thanhdo.edu.vn/#wpcf7-f132-p1198-o2" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
+<form action="https://script.google.com/macros/s/AKfycbybKbZWwVp1y8itoTE28pzkMvyC9X9dHF7E3Iam-FwHgwrC_CoU91YJDf-FdmTAPamnXQ/exec" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="132" />
 <input type="hidden" name="_wpcf7_version" value="5.6" />
@@ -1329,17 +1329,17 @@ $(function () {<br />
         Đăng ký nhận tư vấn miễn phí<br />
     </h2-->
 <div class="htmale">
-<div class="hoten col-12"><span class="wpcf7-form-control-wrap" data-name="ho_va_ten"><input type="text" name="ho_va_ten" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Họ và tên" /></span></div>
+<div class="hoten col-12"><span class="wpcf7-form-control-wrap" data-name="ho_ten"><input type="text" name="ho_ten" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Họ và tên" /></span></div>
 </div>
 <div class="htmale">
 <div class="hoten col-6"><span class="wpcf7-form-control-wrap" data-name="so_dien_thoai"><input type="number" name="so_dien_thoai" value="" class="wpcf7-form-control wpcf7-number wpcf7-validates-as-required wpcf7-validates-as-number sodienthoai" aria-required="true" aria-invalid="false" placeholder="Số điện thoại" /></span></div>
-<div class="hoten col-6"><span class="wpcf7-form-control-wrap" data-name="email_505"><input type="email" name="email_505" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email email" aria-required="true" aria-invalid="false" placeholder="Email" /></span></div>
+<div class="hoten col-6"><span class="wpcf7-form-control-wrap" data-name="email"><input type="email" name="email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email email" aria-required="true" aria-invalid="false" placeholder="Email" /></span></div>
 </div>
 <div class="htmale">
-<div class="hoten col-12"><span class="wpcf7-form-control-wrap" data-name="nganhhoc"><select name="nganhhoc" class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required" aria-required="true" aria-invalid="false"><option value=""></option><option value="Công nghệ kỹ thuật điện, Điện tử">Công nghệ kỹ thuật điện, Điện tử</option><option value="Công nghệ kỹ thuật ô tô">Công nghệ kỹ thuật ô tô</option><option value="Công nghệ thông tin">Công nghệ thông tin</option><option value="Điều dưỡng">Điều dưỡng</option><option value="Dược học">Dược học</option><option value="Giáo dục học">Giáo dục học</option><option value="Kế toán">Kế toán</option><option value="Luật">Luật</option><option value="Ngôn ngữ anh">Ngôn ngữ anh</option><option value="Ngôn ngữ Trung Quốc">Ngôn ngữ Trung Quốc</option><option value="Quản trị khách sạn">Quản trị khách sạn</option><option value="Quản trị kinh doanh">Quản trị kinh doanh</option><option value="Quản trị văn phòng">Quản trị văn phòng</option><option value="Việt Nam học">Việt Nam học</option></select></span></div>
+<div class="hoten col-12"><span class="wpcf7-form-control-wrap" data-name="he_dao_tao"><select name="he_dao_tao" class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required" aria-required="true" aria-invalid="false"><option value=""></option><option value="Công nghệ kỹ thuật điện, Điện tử">Công nghệ kỹ thuật điện, Điện tử</option><option value="Công nghệ kỹ thuật ô tô">Công nghệ kỹ thuật ô tô</option><option value="Công nghệ thông tin">Công nghệ thông tin</option><option value="Điều dưỡng">Điều dưỡng</option><option value="Dược học">Dược học</option><option value="Giáo dục học">Giáo dục học</option><option value="Kế toán">Kế toán</option><option value="Luật">Luật</option><option value="Ngôn ngữ anh">Ngôn ngữ anh</option><option value="Ngôn ngữ Trung Quốc">Ngôn ngữ Trung Quốc</option><option value="Quản trị khách sạn">Quản trị khách sạn</option><option value="Quản trị kinh doanh">Quản trị kinh doanh</option><option value="Quản trị văn phòng">Quản trị văn phòng</option><option value="Việt Nam học">Việt Nam học</option></select></span></div>
 </div>
 </div>
-<p><input type="submit" value="Gửi" class="wpcf7-form-control has-spinner wpcf7-submit guinhantuvan" /></p>
+<p><input type="submit" value="Gửi" class="wpcf7-form-control has-spinner wpcf7-submit guinhantuvanz" /></p>
 <div class="wpcf7-response-output" aria-hidden="true"></div></form></div>					</div>
 						</div>
 				</div>
@@ -1569,7 +1569,7 @@ $(function () {<br />
 								<div class="elementor-text-editor elementor-clearfix">
 				<div role="form" class="wpcf7" id="wpcf7-f146-p1198-o4" lang="en-US" dir="ltr">
 <div class="screen-reader-response"><p role="status" aria-live="polite" aria-atomic="true"></p> <ul></ul></div>
-<form action="https://tuyensinh.thanhdo.edu.vn/#wpcf7-f146-p1198-o4" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
+<form action="https://script.google.com/macros/s/AKfycbybKbZWwVp1y8itoTE28pzkMvyC9X9dHF7E3Iam-FwHgwrC_CoU91YJDf-FdmTAPamnXQ/exec" method="post" class="wpcf7-form init" novalidate="novalidate" data-status="init">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="146" />
 <input type="hidden" name="_wpcf7_version" value="5.6" />
@@ -1584,8 +1584,8 @@ $(function () {<br />
 <input type="hidden" name="_wpcf7cf_steps" value="{}" />
 <input type="hidden" name="_wpcf7cf_options" value="{&quot;form_id&quot;:146,&quot;conditions&quot;:[],&quot;settings&quot;:{&quot;animation&quot;:&quot;yes&quot;,&quot;animation_intime&quot;:200,&quot;animation_outtime&quot;:200,&quot;conditions_ui&quot;:&quot;normal&quot;,&quot;notice_dismissed&quot;:false}}" />
 </div>
-<p><span class="wpcf7-form-control-wrap" data-name="text-458"><input type="text" name="text-458" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required email_subscribe" aria-required="true" aria-invalid="false" placeholder="Email" /></span><br />
-<button type="submit" class="wpcf7-submit"><i class="fab fa-telegram-plane"></i></button></p>
+<p><span class="wpcf7-form-control-wrap" data-name="text-458"><input type="text" name="email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required email_subscribe" aria-required="true" aria-invalid="false" placeholder="Email" /></span><br />
+<button type="submit" class="email-form wpcf7-submitz"><i class="fab fa-telegram-plane"></i></button></p>
 <div class="wpcf7-response-output" aria-hidden="true"></div></form></div>					</div>
 						</div>
 				</div>
@@ -1825,6 +1825,32 @@ $(function () {<br />
                 // $(".tohopmonxettuyen").trigger("change");
             });
         </script>
+
+		  <script>
+			function submitForm() {
+				var form = document.getElementById("myForm");
+				form.addEventListener("submit", function(e) {
+				e.preventDefault();
+				fetch(form.action, {
+					method: "POST",
+					body: new FormData(form)
+				}).then(function(response) {
+					if (response.ok) {
+						// Chuyển hướng sau khi gửi thành công
+						window.location.href = "https://example.com/thank-you-page";
+					} else {
+						throw new Error('Network response was not ok');
+					}
+				}).catch(function(error) {
+					console.error('There has been a problem with your fetch operation:', error);
+				});
+				});
+
+			}
+			
+			</script>
+
+
         <script type="text/javascript">
         jQuery(document).ready(function() {
           jQuery('.logo .attachment-full').parent().attr("href", 'index.html');
