--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
     position: fixed;
     right: 20px;
     bottom: 40px;
+	 z-index: 9999;
 }
 .mess-zalo ul {
     list-style: none;
